<resources>
    <string name="app_name">Quick Notes</string>

    <!-- Facebook -->
    <string name="facebook_app_id">995465440895000</string>
    <string name="fb_login_protocol_scheme">fb995465440895000</string>

    <!-- Fragments -->
    <string name="instructions">Instructions</string>
    <string name="list">List</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="multiple_notes">Multiple Notes</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="logout_alert">Are you sure you want to log out?</string>

    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="new_user">New User</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_email_sent">Password Reset Email Sent</string>

    <!-- Note Screen -->
    <string name="tags">Tags</string>
    <string name="receive_notification">Receive Notification?</string>
    <string name="notification_time">Notification Time</string>
    <string name="default_time">00:00:00</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- Save and Delete Alerts -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_alert">Are you sure you want to replace this note?</string>
    <string name="delete_alert">Are you sure you want to delete this note?</string>
    <string name="multiple_notes_alert">You are about to add %1$d notes. Are you sure you want to continue?</string>

    <!-- Search Screen -->
    <string name="keywords">Keywords</string>
    <string name="search_untagged">Search Untagged</string>

    <!-- List Screen -->
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="all_posts">All %1$d Notes</string>
    <string name="posts_involving">%1$d Notes Involving %2$s</string>
    <string name="posts_tagged">%1$d Notes Tagged %2$s</string>
    <string name="posts_involving_and_tagged">%1$d Notes Involving %2$s And Tagged %3$s</string>
    <string name="untagged_posts">%1$d Untagged Notes</string>
    <string name="untagged_posts_involving">%1$d Untagged Notes Involving %2$s</string>

    <!-- Error Messages -->
    <string name="fields_empty">Please fill in all fields.</string>
    <string name="email_required">Email is required.</string>
    <string name="email_password_required">Email and Password are required.</string>
    <string name="passwords_must_match">Passwords must match.</string>
    <string name="email_displayname_password_reenter_required">Email, Display Name, Password, and Reenter Password are required.</string>
    <string name="invalid_email">Invalid Email</string>
</resources>
