<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/note">
    <action android:id="@+id/action_logout"
        app:destination="@id/login"
        app:enterAnim="@anim/push_left_in"
        app:exitAnim="@anim/push_left_out" />
    <fragment android:id="@+id/note"
        android:name="com.mathgeniusguide.quicknotes.fragments.NoteFragment"
        android:label="@string/note"
        tools:layout="@layout/note_fragment">
    </fragment>
    <fragment android:id="@+id/search"
        android:name="com.mathgeniusguide.quicknotes.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment">
        <action android:id="@+id/action_search_to_list"
            app:destination="@id/list"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
    </fragment>
    <fragment android:id="@+id/statistics"
        android:name="com.mathgeniusguide.quicknotes.fragments.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/statistics_fragment">
    </fragment>
    <fragment android:id="@+id/login"
        android:name="com.mathgeniusguide.quicknotes.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">
        <action android:id="@+id/action_login"
            app:destination="@id/note"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
    </fragment>
    <fragment android:id="@+id/settings"
        android:name="com.mathgeniusguide.quicknotes.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment">
    </fragment>
    <fragment android:id="@+id/instructions"
        android:name="com.mathgeniusguide.quicknotes.fragments.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/instructions_fragment">
    </fragment>
    <fragment android:id="@+id/list"
        android:name="com.mathgeniusguide.quicknotes.fragments.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/list_fragment">
    </fragment>
</navigation>