<?xml version="1.0" encoding="utf-8"?>
<tools:menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <item android:id="@+id/instructions"
                android:title="@string/instructions"
                android:icon="@drawable/instructions" />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/settings" />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/logout" />
        </menu>
    </item>
</tools:menu>