<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/note"
        android:textSize="15sp"
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="#ffffff"/>

    <TextView
        android:text="@string/date"
        android:textSize="10sp"
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#808080"/>

    <TextView
        android:text="@string/tags"
        android:textSize="10sp"
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        android:textColor="#8080ff"/>

</androidx.constraintlayout.widget.ConstraintLayout>

<!-- Code Generator

note, tv15, mw, tm20, lm5
date, tv10, ww, tm5, rm5
tags, tv10, ww, 0m5,, lm5

-->